<resources>
    <string name="app_name">Swoosh</string>
    <string name="image_background">Image background</string>
    <string name="app_title">app title</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city, and dominate the league</string>
    <string name="get_started">get started</string>
    <string name="app_logo">app logo</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">Mens</string>

    <string name="womens">Womens</string>

    <string name="co_ed">co-ed</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="next">next</string>
    <string name="background_image">background image</string>
    <string name="baller">Baller</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">Beginner</string>
    <string name="finish">Finish</string>
    <string name="SearchLeague">Looking for the Coed Beginner League near you...</string>
    <string name="layout_backgound">layout backgound</string>

</resources>