<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.SkillACtivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/beginnerballerbg"
        android:contentDescription= "@string/background_image" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="121dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_logo"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/swooshlogo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/i_am_a"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ToggleButton
        android:id="@+id/BeginnerSkillbtn"
        android:layout_width="120dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/swoosh_toggle"
        android:onClick="onBeginnerClick"
        android:text="@string/togglebutton"
        android:textColor="@color/white"
        android:textOff="@string/beginner"
        android:textOn="@string/beginner"
        app:layout_constraintEnd_toStartOf="@+id/BallerSkillBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="OnClick" />

    <ToggleButton
        android:id="@+id/BallerSkillBtn"
        android:layout_width="120dp"
        android:layout_height="57dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/swoosh_toggle"
        android:onClick="onBallerClick"
        android:text="@string/togglebutton"
        android:textColor="@color/white"
        android:textOff="@string/baller"
        android:textOn="@string/baller"
        app:layout_constraintBottom_toBottomOf="@+id/BeginnerSkillbtn"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/BeginnerSkillbtn"
        app:layout_constraintTop_toTopOf="@+id/BeginnerSkillbtn"
        tools:ignore="OnClick" />

    <ToggleButton
        android:id="@+id/FinishSkillBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/swoosh_toggle"
        android:onClick="onFinishClick"
        android:text="@string/togglebutton"
        android:textColor="@color/white"
        android:textOff="@string/finish"
        android:textOn="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BeginnerSkillbtn"
        app:layout_constraintVertical_bias="0.965"
        tools:ignore="OnClick" />


</androidx.constraintlayout.widget.ConstraintLayout>